--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "framer-motion": "^6.3.16",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-modal": "^3.15.1"
+    "react-hot-toast": "^2.2.0",
+    "react-modal": "^3.15.1",
+    "use-long-press": "^2.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
